--- a/test/test01.css
+++ b/test/test01.css
@@ -5,13 +5,15 @@
     font-weight: bold;
     font-style: italic;
 }
-
 .R {
     color: #ff0000;
+    background-color: #000000;
 }
 .G {
     color: #00ff00;
+    background-color: #000000;
 }
 .B {
     color:#0000ff;
+    background-color: #000000;
 }
